# cob_scenario_states

./: README.md  stack.xml
cob_actionlib/: CMakeLists.txt  mainpage.dox  manifest.xml  package.xml
cob_actionlib/src/: gate_keeper_cancel.py  gate_keeper_client.py  gate_keeper_server.py  queued_action_client.py  queued_action_server.py
cob_compute_approach_pose/: CMakeLists.txt  mainpage.dox  manifest.xml
cob_compute_approach_pose/ros/src/: compute_approach_pose_client.cpp  compute_approach_pose_node.cpp
cob_generic_states/: CMakeLists.txt  manifest.xml  package.xml  setup.py
cob_generic_states/src/: generic_perception_states.py
cob_generic_states/src/cob_generic_states/: __init__.py  generic_basic_states.py  generic_manipulation_states.py  generic_navigation_states.py  generic_perception_states.py  generic_state_machines.py
cob_generic_states/test/: basic_states.py  manipulation_states.py  navigation_states.py  perception_states.py  state_machines.py
cob_generic_states_experimental/: CMakeLists.txt  manifest.xml  package.xml  setup.py
cob_generic_states_experimental/src/: Accompany.py  Accompany_aided.py  ApproachPerimeter.py  ApproachPolygon.py  ApproachPose.py  ApproachPoses.py  BasicIO.py  ChangeFloor.py  CobIntroduction.py  DetectAndPressButton.py  DetectObjectBackside.py  DetectObjectFrontside.py  DetectObjects.py  DetectObjectsBackside.py  DetectObjectsFrontside.py  DetectTables.py  DoorNode.py  Explore.py  FetchObject.py  GoToGoalGeneric.py  GoToUtils.py  Grasp.py  HandOut.py  InvestigateTableObjects.py  InvestigateTables.py  LookForPerson.py  MoveArm.py  MoveYourself.py  ObjectDetector.py  ObjectExploration.py  PickObject.py  PressButton.py  PublishDetectedObjects.py  PutObjectOnTray.py  SearchPeople.py  SelectNavigationGoal.py  TrackedHumansPublisher.cpp  WaitForOpenDoor.py  WaitForOpenElevatorDoors.py  WaitForSingleElevatorDoor.py  (+1 more)
cob_generic_states_experimental/src/cob_generic_states_experimental/: ApproachPerimeter.py  ApproachPolygon.py  ApproachPose.py  ApproachPoses.py  BasicIO.py  ChangeFloor.py  CobIntroduction.py  DeliverObject.py  DetectAndPressButton.py  DetectObjectsBackside.py  DetectObjectsFrontside.py  DetectPeople.py  DetectTables.py  Explore.py  ExploreAndMoveYourself.py  GoToGoalGeneric.py  GoToUtils.py  HandOut.py  InvestigateTableObjects.py  KeepMoving.py  KeepMovingUntilObjectSelected.py  LookForPerson.py  MoveYourself.py  ObjectDetector.py  ObjectExploration.py  PrepareRobot.py  PressButton.py  PublishDetectedObjects.py  ScreenFormatting.py  SelectObjectFromKeyboard.py  WaitForOpenDoor.py  WaitForOpenElevatorDoors.py  WaitForSingleElevatorDoor.py
cob_generic_states_experimental/srv/: Door.srv
cob_generic_states_experimental/test/: door.test  test_door.py
cob_scenario_states/: CMakeLists.txt  package.xml
cob_skill_api/: CMakeLists.txt  mainpage.dox  manifest.xml  package.xml
cob_skill_api/src/: ObjectDetector.py  abc_conditioncheck.py  abc_skill.py  abc_sm_skill.py  abc_state_skill.py  condition_check.py  post_check.py  pre_check.py  skill.py  skill_approachpose.py  skill_approachposeTest.py  skill_detectobjectsback.py  skill_detectobjectsfront.py  skill_explore.py  skill_foo.py  skill_fooTest.py  skill_get_milk.py  skill_grasp.py  skill_objectdetector.py  skill_selectnavgoal.py  skill_sm_approachpose.py  skill_sm_explore.py  skill_sm_foo.py  skill_state_announcefoundobjects.py  skill_state_approachjoint.py  skill_state_approachpose.py  skill_state_detectobjectsback.py  skill_state_detectobjectsfront.py  skill_state_get_milk.py  skill_state_grasp.py  skill_state_grasp_cph.py  skill_state_putobjectontray.py  skill_state_selectnavgoal.py  temp_skill_detectandgrasp.py  temp_skill_sm_detectandgrasp.py
cob_skill_api/src/bag_logger_temp/: bag_record.py
cob_skill_api/src/yaml/: cob3_3.yaml  desire.yaml  post.yaml  pre.yaml  raw3_2.yaml
