<package>
	<name>cob_actionlib</name>
	<version>0.1.0</version>
	<description>
		actionlib
	</description>
	<author>Thiago de Freitas</author>
	<maintainer>Thiago de Freitas</maintainer>
	<license>LGPL</license>
	<url>http://ros.org/wiki/cob_actionlib</url>

	<buildtool_depend>catkin</buildtool_depend>

	<build_depend>cmake_modules</build_depend>
	<build_depend>rospy</build_depend>
	<build_depend>actionlib</build_depend>

	<run_depend>rospy</run_depend>
	<run_depend>actionlib</run_depend>

</package>
