<package>
	<name>cob_actionlib</name>
	<version>0.1.0</version>
	<description>
		cob_actionlib
	</description>
	<author>Thiago de Freitas</author>
	<maintainer email="fmw@ipa.fhg.de">Florian Weisshardt</maintainer>
	<license>LGPL</license>
	<url>http://ros.org/wiki/cob_actionlib</url>

	<buildtool_depend>catkin</buildtool_depend>

	<run_depend>rospy</run_depend>
	<run_depend>actionlib</run_depend>

</package>
