<package>
	<name>cob_generic_states</name>
	<version>0.1.0</version>
	<description>
		This package provides a set of generic states using [[cob_script_server]] and [[smach]] which can be used in multiple scenarios.
	</description>
	<author email="fmw@ipa.fhg.de">Florian Weisshardt</author>
	<maintainer email="fmw@ipa.fhg.de">Florian Weisshardt</maintainer>
	<license>LGPL</license>
	<url>http://ros.org/wiki/cob_generic_states</url>

	<buildtool_depend>catkin</buildtool_depend>

	<build_depend>message_generation</build_depend>
	<run_depend>message_runtime</run_depend>

	<build_depend>std_msgs</build_depend>

	<run_depend>cmake_modules</run_depend>
	<run_depend>rospy</run_depend>
	<run_depend>smach</run_depend>
	<run_depend>smach_ros</run_depend>
	<run_depend>tf</run_depend>
	<run_depend>std_msgs</run_depend>
	<run_depend>actionlib_msgs</run_depend>
	<!--run_depend>kinematics_msgs</run_depend-->
	<run_depend>cob_object_detection_msgs</run_depend>
	<run_depend>cob_script_server</run_depend>
	<run_depend>cob_object_detection_fake</run_depend>

</package>
