<package format="2">
  <name>cob_generic_states</name>
  <version>0.1.0</version>
  <description>
    This package provides a set of generic states using [[cob_script_server]] and [[smach]] which can be used in multiple scenarios.
  </description>

  <license>LGPL</license>
  <url>http://ros.org/wiki/cob_generic_states</url>

  <author email="fmw@ipa.fhg.de">Florian Weisshardt</author>
  <maintainer email="fmw@ipa.fhg.de">Florian Weisshardt</maintainer>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>message_generation</build_depend>
  <exec_depend>message_runtime</exec_depend>

  <depend>std_msgs</depend>

  <exec_depend>cob_object_detection_msgs</exec_depend>
  <exec_depend>cob_script_server</exec_depend>
  <exec_depend>nav_msgs</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>std_srvs</exec_depend>
  <exec_depend>smach</exec_depend>
  <exec_depend>smach_ros</exec_depend>

</package>
