<package format="2">
	<name>cob_generic_states_experimental</name>
	<version>0.1.0</version>
	<description>
		cob_generic_states_experimental
	</description>
	<author email="richard.bormann@ipa.fraunhofer.de">Richard Bormann</author>
	<author>Tobias Sing</author>
	<author email="fmw@ipa.fhg.de">Florian Weisshardt</author>
	<maintainer email="fmw@ipa.fhg.de">Florian Weisshardt</maintainer>
	<license>LGPL</license>
	<url>http://ros.org/wiki/cob_generic_states_experimental</url>

	<buildtool_depend>catkin</buildtool_depend>

	<build_depend>message_generation</build_depend>
	<exec_depend>message_runtime</exec_depend>

	<exec_depend>rospy</exec_depend>
	<exec_depend>smach</exec_depend>
	<exec_depend>smach_ros</exec_depend>
	<!--exec_depend>cob_script_server</exec_depend-->

</package>
