<package format="2">
  <name>cob_scenario_states</name>
  <version>0.1.0</version>
  <description>This meta-package includes open source software with different robot behaviour scripts.</description>

  <license>LGPL</license>
  <url type="website">http://ros.org/wiki/cob_scenario_states</url>

  <maintainer email="fmw@ipa.fhg.de">Florian Weisshardt</maintainer>

  <buildtool_depend>catkin</buildtool_depend>

  <exec_depend>cob_generic_states</exec_depend>
  <exec_depend>cob_generic_states_experimental</exec_depend>

  <export>
    <metapackage/>
  </export>
</package>
