<package>
	<name>cob_skill_api</name>
	<version>0.1.0</version>
	<description>
		cob_skill_api
	</description>
	<author>Alexander Bubeck</author>
	<maintainer email="fmw@ipa.fhg.de">Florian Weisshardt</maintainer>
	<license>LGPL</license>
	<url>http://ros.org/wiki/cob_skill_api</url>

	<buildtool_depend>catkin</buildtool_depend>

	<build_depend>cmake_modules</build_depend>
	<build_depend>rospy</build_depend>
	<build_depend>smach</build_depend>
	<build_depend>smach_ros</build_depend>
	<build_depend>tf</build_depend>
	<build_depend>cob_script_server</build_depend>
	<build_depend>tf_conversions</build_depend>
	<!--build_depend>kinematics_msgs</build_depend-->
	<build_depend>nav_msgs</build_depend>
	<build_depend>cob_object_detection_msgs</build_depend>
	<build_depend>visualization_msgs</build_depend>

	<run_depend>rospy</run_depend>
	<run_depend>smach</run_depend>
	<run_depend>smach_ros</run_depend>
	<run_depend>tf</run_depend>
	<run_depend>cob_script_server</run_depend>
	<run_depend>tf_conversions</run_depend>
	<!--run_depend>kinematics_msgs</run_depend-->
	<run_depend>nav_msgs</run_depend>
	<run_depend>cob_object_detection_msgs</run_depend>
	<run_depend>visualization_msgs</run_depend>

</package>
